crates/uitest/fixtures/ty_check/method_selection/ambiguous_trait_def.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/method_selection/ambiguous_trait_def.fe
---
error[8-0026]: multiple trait candidates found
   ┌─ ambiguous_trait_def.fe:27:7
   │
27 │     f.foo()
   │       ^^^
   │       │
   │       `foo` is ambiguous
   │       candidate: `Trait1::foo`
   │       candidate: `Trait2::foo`
